achievments are FULLY OPERATIONAL. Is it okay if i adopt the usage of this phrase? I honestly don't wanna step on any toes. So yeah if you have a problem with me using "FULLY OPERATIONAL" please just let me know yeah. Thanls, Nathan

--- a/.classpath
+++ b/.classpath
@@ -7,5 +7,6 @@
 	<classpathentry kind="lib" path="/media/storage/Documents/Uni/SoftEng206/a03/Tatai/jackson-databind-2.1.4.jar"/>
 	<classpathentry kind="lib" path="/media/storage/Documents/Uni/SoftEng206/a03/Tatai/jackson-core-2.1.4.jar"/>
 	<classpathentry kind="lib" path="/media/storage/Documents/Uni/SoftEng206/a03/Tatai/jackson-annotations-2.1.4.jar"/>
+	<classpathentry kind="lib" path="/media/storage/Documents/Uni/SoftEng206/a03/Tatai/fontawesomefx-8.9.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
